--- a/views/index.twig
+++ b/views/index.twig
@@ -11,6 +11,7 @@
             <th>Voted no</th>
             <th># of votes</th>
             <th>Approval %</th>
+            <th>Hivemind %</th>
         </tr>
         </thead>
         <tbody>
@@ -23,6 +24,7 @@
                 <td>{{ user.noVotes.count() }}</td>
                 <td>{{ user.votes.count() }}</td>
                 <td>{{ user.approval * 100 }}%</td>
+                <td>{{ user.hivemind * 100 }}%</td>
             </tr>
         {% endfor %}
         </tbody>
