--- a/views/layout.twig
+++ b/views/layout.twig
@@ -1,4 +1,4 @@
-{% set title = title ? "#{tile} - Why can't we have nice things" : "Why can't we have nice things" %}
+{% set title = title ? "#{title} - Why can't we have nice things" : "Why can't we have nice things" %}
 
 <!doctype html>
 <html lang="en">
