Compile front-end

--- a/resources/views/index.twig
+++ b/resources/views/index.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <p>Only users who voted more than 5 times are taken into account.</p>
 
-    <table class="table table-striped table-sm table-hover">
+    <table class="table table-striped table-condensed table-hover">
         <thead>
         <tr>
             <th>User</th>
