--- a/resources/views/show.twig
+++ b/resources/views/show.twig
@@ -2,7 +2,7 @@
 {% set title = user.name %}
 
 {% block content %}
-    <table class="table table-sm table-hover table-striped">
+    <table class="table table-condensed table-hover table-striped">
         <thead>
             <tr>
                 <th>RFC</th>
