Add navbar and requests.index

--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/builds/main.css">
 </head>
 <body>
+    {% include '_layouts/partials/navbar.twig' %}
+
     <main class="container">
         <header class="page-header text-center">
             <h1 class="layout-header">
