--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -3,12 +3,17 @@
 {% set subtitle = user.name %}
 
 {% block content %}
+    <p class="lead text-center">
+        This user has voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ user.hivemind * 100 }}%</strong> of the time.
+    </p>
+
     <table class="table table-condensed table-hover table-striped">
         <thead>
             <tr>
                 <th>RFC</th>
                 <th class="text-right">Voted</th>
                 <th class="text-right">Approval %</th>
+                <th class="text-right">Correct?</th>
             </tr>
         </thead>
         {% for vote in user.votes %}
@@ -16,6 +21,7 @@
                 <td><a target="_blank" href="{{ vote.request.link }}">{{ vote.request.name }}</a></td>
                 <td class="text-right">{{ vote.vote ? 'Yes' : 'No' }}</td>
                 <td class="text-right">{{ (vote.request.approval * 100)|number_format(1) }}%</td>
+                <td class="text-right">{{ vote.request.passed ? 'Yes' : 'No' }}</td>
             </tr>
         {% endfor %}
     </table>
