--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -7,8 +7,8 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Users</a></li>
-                <li><a href="/requests">RFCs</a></li>
+                <li {% if current_uri == '/' %}class="active"{% endif %}><a href="/">Users</a></li>
+                <li {% if current_uri == '/requests' %}class="active"{% endif %}><a href="/requests">RFCs</a></li>
             </ul>
         </div>
     </div>
