--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -27,8 +27,8 @@
                 <td class="text-right">{{ user.yes_votes }}</td>
                 <td class="text-right">{{ user.no_votes }}</td>
                 <td class="text-right">{{ user.total_votes }}</td>
-                <td class="text-right">{{ (user.approval * 100)|number_format(1) }}%</td>
-                <td class="text-right">{{ (user.hivemind * 100)|number_format(1) }}%</td>
+                <td class="text-right">{{ (user.approval * 100)|number_format(precision) }}%</td>
+                <td class="text-right">{{ (user.hivemind * 100)|number_format(precision) }}%</td>
             </tr>
         {% endfor %}
         </tbody>
