--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <p class="lead text-center">
-        This user has voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ user.hivemind * 100 }}%</strong> of the time.
+        This user has voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ (user.hivemind * 100)|number_format(precision) }}%</strong> of the time.
     </p>
 
     <table class="table table-condensed table-hover table-striped">
@@ -20,8 +20,8 @@
             <tr>
                 <td><a target="_blank" href="{{ vote.request.link }}">{{ vote.request.name }}</a></td>
                 <td class="text-right">{{ vote.vote ? 'Yes' : 'No' }}</td>
-                <td class="text-right">{{ (vote.request.approval * 100)|number_format(1) }}%</td>
-                <td class="text-right">{{ vote.request.passed ? 'Yes' : 'No' }}</td>
+                <td class="text-right">{{ (vote.request.approval * 100)|number_format(precision) }}%</td>
+                <td class="text-right">{{ vote.request.passed == vote.vote ? 'Yes' : 'No' }}</td>
             </tr>
         {% endfor %}
     </table>
