--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -3,4 +3,5 @@
 @import 'components/explanations';
 @import 'components/tables';
 @import 'layout/header';
+@import 'layout/search';
 @import 'layout/footer';
