--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -7,6 +7,8 @@
         In total, <strong>{{ (passed * 100)|number_format(precision) }}%</strong> have passed.
     </p>
 
+    {% include '_partials/search.twig' %}
+
     <table class="table table-striped table-condensed table-hover">
         <thead>
         <tr>
