--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -7,6 +7,8 @@
         <li>The <strong>Hivemind %</strong> is how many RFCs an user has approved of that other users also approved of in their majority.</li>
     </ul>
 
+    {% include '_partials/search.twig' %}
+
     <table class="table table-striped table-condensed table-hover">
         <thead>
         <tr>
