Add note in footer

--- a/resources/views/_layouts/partials/footer.twig
+++ b/resources/views/_layouts/partials/footer.twig
@@ -1,5 +1,11 @@
 <footer class="layout-footer">
     <section>
+        <p>
+            All number are approximations and are not representative of anybody being actually in the right or wrong.<br>
+            They're just numbers. Calm down.
+        </p>
+    </section>
+    <section>
         &copy; {{ 'now'|date('Y') }} -
         <a target="_blank" href="https://github.com/madewithlove/why-cant-we-have-nice-things">source</a> -
         <a target="_blank" href="https://github.com/madewithlove/why-cant-we-have-nice-things/graphs/contributors">creators</a>
