--- a/resources/views/about.twig
+++ b/resources/views/about.twig
@@ -2,5 +2,12 @@
 {% set title = 'About' %}
 
 {% block content %}
-    <p></p>
+    <p class="lead text-justify">
+        This application was made to give people more insight into who votes RFCs and their voting history.<br>
+        My motivation is I've seen a lot of people (me included) bash certain names as constant downvoters of good features
+        and I wanted to verify whether this was confirmation bias or a reality.
+    </p>
+    <p>
+        <em>It was confirmation bias.</em>
+    </p>
 {% endblock %}
