--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -9,26 +9,28 @@
 
     {% include '_partials/search.twig' %}
 
-    <table class="table table-striped table-condensed table-hover">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th class="text-right"># of votes</th>
-            <th class="text-right">Approval %</th>
-            <th class="text-right">Passed?</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for request in requests %}
+    <div class="table-responsive">
+        <table class="table table-striped table-condensed table-hover">
+            <thead>
             <tr>
-                <td>
-                    <a href="{{ request.link }}">{{ request.name }}</a>
-                </td>
-                <td class="text-right">{{ request.votes.count() }}</td>
-                <td class="text-right">{{ (request.approval * 100)|number_format(precision) }}%</td>
-                <td class="text-right">{{ request.votes.count() ? (request.passed ? 'Yes' : 'No') : 'N/A' }}</td>
+                <th>Name</th>
+                <th class="text-right"># of votes</th>
+                <th class="text-right">Approval %</th>
+                <th class="text-right">Passed?</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for request in requests %}
+                <tr>
+                    <td>
+                        <a href="{{ request.link }}">{{ request.name }}</a>
+                    </td>
+                    <td class="text-right">{{ request.votes.count() }}</td>
+                    <td class="text-right">{{ (request.approval * 100)|number_format(precision) }}%</td>
+                    <td class="text-right">{{ request.votes.count() ? (request.passed ? 'Yes' : 'No') : 'N/A' }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
