Work on questions

--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -10,7 +10,7 @@
 <body>
     {% include '_layouts/partials/navbar.twig' %}
 
-    <main class="container">
+    <main class="container-fluid">
         <header class="page-header text-center">
             <h1 class="layout-header">
                 <a href="/">{{ app_name }}</a>
