--- a/resources/views/requests/show.twig
+++ b/resources/views/requests/show.twig
@@ -8,24 +8,29 @@
         <a href="{{ request.link }}" target="_blank">View this RFC on the PHP wiki</a>
     </p>
 
-    <div class="table-responsive">
-        <table class="table table-condensed table-striped table-hover">
-            <thead>
-            <tr>
-                <th>User</th>
-                <th class="text-center">Vote</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for vote in request.votes %}
-                <tr>
-                    <td>
-                        <a href="/users/{{ vote.user.name }}">{{ vote.user.name }}</a>
-                    </td>
-                    <td class="text-center {{ vote.vote ? 'success' : 'danger' }}">{{ vote.vote ? 'Yes' : 'No' }}</td>
+    {% for question in request.questions %}
+        <div class="table-responsive">
+            <table class="table table-condensed table-striped table-hover">
+                <thead>
+                <tr class="text-center">
+                    <td colspan="2">{{ question.name }} ({{ percentage(question.approval) }}% approved)</td>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                <tr>
+                    <th>User</th>
+                    <th class="text-center">Vote</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for vote in question.votes %}
+                    <tr>
+                        <td>
+                            <a href="/users/{{ vote.user.name }}">{{ vote.user.name }}</a>
+                        </td>
+                        <td class="text-center {{ vote.vote ? 'success' : 'danger' }}">{{ vote.vote ? 'Yes' : 'No' }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% endfor %}
 {% endblock %}
