Only show voted on RFCs

--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -21,7 +21,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for request in requests %}
+            {% for request in voted %}
                 <tr>
                     <td>
                         <a href="/requests/{{ request.id }}">{{ request.name }}</a>
