Add infos about PHP

--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -15,7 +15,8 @@
     <main class="container-fluid">
         <header class="page-header text-center">
             <h1 class="layout-header">
-                <a href="/">{{ app_name }}</a>
+                <a href="/">{{ app_name }}</a><br>
+                <small>Tracker of PHP RFCs since 1873</small>
             </h1>
 
             {% if subtitle %}
