--- a/resources/views/about.twig
+++ b/resources/views/about.twig
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout.twig' %}
 {% set title = 'About' %}
+{% set subtitle = title %}
 
 {% block content %}
     <div class="container">
