--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout.twig' %}
 {% set title = 'RFCs' %}
+{% set subtitle = title %}
 
 {% block content %}
     <p class="lead text-center">
