--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -1,4 +1,5 @@
 {% extends '_layouts/layout.twig' %}
+{% set subtitle = 'Users' %}
 
 {% block content %}
     <ul class="explanations list-unstyled">
