--- a/resources/views/_layouts/partials/navbar.twig
+++ b/resources/views/_layouts/partials/navbar.twig
@@ -10,7 +10,7 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 {% for link in navigation %}
                     <li {% if current_uri starts with link.uri %}class="active"{% endif %}>
                         <a href="{{ link.uri }}">{{ link.label }}</a>
