--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -8,27 +8,29 @@
         <a target="_blank" href="http://people.php.net/{{ user.name }}">View his profile on phppeople</a>
     </p>
 
-    <table class="table table-condensed table-hover table-striped">
-        <thead>
-            <tr>
-                <th>RFC</th>
-                <th>Question</th>
-                <th class="text-right">Voted</th>
-                <th class="text-right">Approval %</th>
-                <th class="text-right">Correct?</th>
-            </tr>
-        </thead>
-        {% for vote in user.votes %}
-            {% set yes = vote.choice < vote.question.choices %}
-            <tr>
-                <td>
-                    <a href="/requests/{{ vote.question.request.id }}">{{ vote.question.request.name }}</a>
-                </td>
-                <td>{{ vote.question.name }}</td>
-                <td class="text-right">{{ choice(vote.question, vote) }}</td>
-                <td class="text-right">{{ percentage(vote.question.approval) }}%</td>
-                <td class="text-right">{{ vote.question.majority_choice == vote.choice ? 'Yes' : 'No' }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+    <div class="table-responsive">
+        <table class="table table-condensed table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>RFC</th>
+                    <th>Question</th>
+                    <th class="text-right">Voted</th>
+                    <th class="text-right">Approval %</th>
+                    <th class="text-right">Correct?</th>
+                </tr>
+            </thead>
+            {% for vote in user.votes %}
+                {% set yes = vote.choice < vote.question.choices %}
+                <tr>
+                    <td>
+                        <a href="/requests/{{ vote.question.request.id }}">{{ vote.question.request.name }}</a>
+                    </td>
+                    <td>{{ vote.question.name }}</td>
+                    <td class="text-right">{{ choice(vote.question, vote) }}</td>
+                    <td class="text-right">{{ percentage(vote.question.approval) }}%</td>
+                    <td class="text-right">{{ vote.question.majority_choice == vote.choice ? 'Yes' : 'No' }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
