Tweak navbar height

--- a/resources/assets/sass/layout/_navbar.scss
+++ b/resources/assets/sass/layout/_navbar.scss
@@ -1,7 +1,9 @@
 .navbar {
     border-radius: 0;
+    min-height: auto;
 
-    a {
+    li > a {
+        padding: 0.5em;
         text-transform: lowercase;
     }
 }
