Tweak table colors

--- a/resources/assets/sass/components/_tables.scss
+++ b/resources/assets/sass/components/_tables.scss
@@ -37,4 +37,14 @@
     tr.filtered {
         display: none;
     }
+
+    tbody > tr {
+        > td.success {
+            background-color: darken($color-green, 2);
+        }
+
+        &:hover > td.success {
+            background-color: lighten($color-green, 2);
+        }
+    }
 }
