--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -17,8 +17,8 @@
                 <th>Name</th>
                 <th class="text-right"># of votes</th>
                 <th class="text-right">Approval %</th>
-                <th class="text-right">Passed?</th>
-                <th class="text-right">Last update</th>
+                <th class="text-center">Last update</th>
+                <th class="text-center">Passed?</th>
             </tr>
             </thead>
             <tbody>
@@ -29,8 +29,8 @@
                     </td>
                     <td class="text-right">{{ request.votes.count() }}</td>
                     <td class="text-right">{{ percentage(request.approval) }}%</td>
-                    <td class="text-right {{ request.passed ? 'success' : 'danger' }}">{{ request.votes.count() ? (request.passed ? 'Yes' : 'No') : 'N/A' }}</td>
-                    <td class="text-right">{{ request.created_at.toDateString() }}</td>
+                    <td class="text-center">{{ request.created_at.toDateString() }}</td>
+                    <td class="text-center {{ request.passed ? 'success' : 'danger' }}">{{ request.votes.count() ? (request.passed ? 'Yes' : 'No') : 'N/A' }}</td>
                 </tr>
             {% endfor %}
             </tbody>
