Work on user extraction
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -2,6 +2,14 @@
 {% set title = user.name %}
 {% set subtitle = user.name %}
 
+{% block title %}
+    <img class="img-circle" src="{{ gravatar.get(user.email) }}" alt="">
+    <h2>
+        {{ user.name }}<br>
+        <small>{{ user.full_name }}</small>
+    </h2>
+{% endblock %}
+
 {% block content %}
     <p class="lead text-center">
         This user has voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ percentage(user.hivemind) }}%</strong> of the time.<br>
