--- a/resources/views/_layouts/layout.twig
+++ b/resources/views/_layouts/layout.twig
@@ -16,9 +16,13 @@
     {% include '_layouts/partials/navbar.twig' %}
 
     <main class="layout-content container-fluid">
-        {% if subtitle %}
-            <h2 class="text-center">{{ subtitle }}</h2>
-        {% endif %}
+        <div class="layout-pagehead text-center">
+            {% block title %}
+                {% if subtitle %}
+                    <h2>{{ subtitle }}</h2>
+                {% endif %}
+            {% endblock %}
+        </div>
 
         {% block content %}{% endblock %}
     </main>
