--- a/resources/assets/sass/components/_tables.scss
+++ b/resources/assets/sass/components/_tables.scss
@@ -13,6 +13,11 @@
             outline: 0;
         }
 
+        th.text-center[colspan] {
+            background-color: darken($color-green, 2);
+            font-size: 2rem;
+        }
+
         th.tablesorter-headerAsc,
         th.tablesorter-headerDesc {
             background-color: lighten($color-green, 5);
