--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -12,20 +12,50 @@
 
 {% block content %}
     <p class="lead text-center">
-        This user has voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ percentage(user.hivemind) }}%</strong> of the time.<br>
+        This user created {{ user.requests.count() }} RFCs.<br>
+        He/She also voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ percentage(user.hivemind) }}%</strong> of the time.<br>
         <a target="_blank" href="http://people.php.net/{{ user.name }}">View his profile on phppeople</a>
     </p>
+
+    {% if user.requests.count() %}
+        <div class="table-responsive">
+            <table class="table table-condensed table-hover table-striped">
+                <thead>
+                <tr>
+                    <th class="text-center" colspan="5">Created RFCs</th>
+                </tr>
+                <tr>
+                    <th>RFC</th>
+                    <th class="text-right">Approval %</th>
+                    <th class="text-center">Last update</th>
+                </tr>
+                </thead>
+                {% for request in user.requests %}
+                    <tr>
+                        <td>
+                            <a href="/requests/{{ request.id }}">{{ request.name }}</a>
+                        </td>
+                        <td class="text-right">{{ percentage(request.approval) }}%</td>
+                        <td class="text-center">{{ request.created_at.toDateString() }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+    {% endif %}
 
     <div class="table-responsive">
         <table class="table table-condensed table-hover table-striped">
             <thead>
-                <tr>
-                    <th>RFC</th>
-                    <th>Question</th>
-                    <th class="text-right">Voted</th>
-                    <th class="text-right">Approval %</th>
-                    <th class="text-right">Correct?</th>
-                </tr>
+            <tr>
+                <th class="text-center" colspan="5">Voted RFCs</th>
+            </tr>
+            <tr>
+                <th>RFC</th>
+                <th>Question</th>
+                <th class="text-right">Voted</th>
+                <th class="text-right">Approval %</th>
+                <th class="text-right">Correct?</th>
+            </tr>
             </thead>
             {% for vote in user.votes %}
                 {% set yes = vote.choice < vote.question.choices %}
